[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["syauqylei <syauqilenterano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
